--- a/accountdetails.html
+++ b/accountdetails.html
@@ -54,8 +54,8 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right main-nav">
-					<li><a href="#pricing">What is UPR?</a></li>
-					<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">Register</a></li>
+					<li><a href="#pricing">Logout</a></li>
+					<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">Account Settings</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -67,15 +67,9 @@
 			<div class="table">
 				<div class="header-text">
 					<div class="row">
-						<div class="col-md-12 text-center">
-							<h3 class="light white">United Nations</h3>
-							<h1 class="white typed">Universal Periodic Review</h1>
-							<span class="typed-cursor">|</span><br /><br /><br />
-							<center>
-							<p><input type="text" class="form-control form-white" placeholder="Enter username" name="username" style="width:30%;" /></p>
-							<p><input type="password" class="form-control form-white" placeholder="Enter password" name="password" style="width:30%;"/></p></center>
-							<p style="font-size:10px;"><a href="#">Forgot Username</a> <a href="#">Forgot Password</a></p>
-							<p><a href="landing.html" class="btn btn-blue" style="margin-bottom:10px;">Login</a></p>
+						<div class="text-center" style="margin-top:-200px;">
+							<h3 class="light white">Welcome</h3>
+							<h1 class="white typed">We need a few more details from you</h1>
 						</div>
 					</div>
 				</div>
@@ -85,34 +79,31 @@
 	<section>
 		<div class="cut cut-top"></div>
 		<div class="container">
-			<div class="row intro-tables">
+			<div class="row intro-tables" style="margin-top:-210px;">
 				<div class="col-md-4">
 					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Premium Membership</h5>
+						<h5 class="white heading hide-hover">View the current status of a previously submitted UPR complaint.</h5>
 						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Register Today</h4>
-							<h4 class="white heading small-pt">20% Discount</h4>
-							<a href="#" class="btn btn-white-fill expand">Register</a>
+							<h4 class="white heading small-heading no-margin regular">Status of UPR Complaint</h4>
+							<a href="#" class="btn btn-white-fill expand">Check Status</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4" style="border:5px solid #18a5fe;">
+					<div class="intro-table intro-table-hover">
+						<h5 class="white heading hide-hover">Create and submit a new UPR complaint.</h5>
+						<div class="bottom">
+							<h4 class="white heading small-heading no-margin regular">Submit New UPR Complaint</h4>
+							<a href="submission.html" class="btn btn-white-fill expand">Submit New</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Premium Membership</h5>
+						<h5 class="white heading hide-hover">Update an existing UPR complaint</h5>
 						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Register Today</h4>
-							<h4 class="white heading small-pt">20% Discount</h4>
-							<a href="#" class="btn btn-white-fill expand">Register</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Premium Membership</h5>
-						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Register Today</h4>
-							<h4 class="white heading small-pt">20% Discount</h4>
-							<a href="#" class="btn btn-white-fill expand">Register</a>
+							<h4 class="white heading small-heading no-margin regular">Merge a UPR Complaint</h4>
+							<a href="#" class="btn btn-white-fill expand">Edit / Merge</a>
 						</div>
 					</div>
 				</div>
@@ -120,37 +111,6 @@
 			</div>
 		</div>
 	</section>
-
-		<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content modal-popup">
-				<a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
-				<h3 class="white">Register</h3>
-				<form action="" class="popup-form">
-					<input type="text" class="form-control form-white" placeholder="Email Address">
-					<input type="text" class="form-control form-white" placeholder="Username">
-					<input type="password" class="form-control form-white" placeholder="Password">
-					<div class="dropdown">
-						<button id="dLabel" class="form-control form-white dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Type of Account
-						</button>
-						<ul class="dropdown-menu animated fadeIn" role="menu" aria-labelledby="dLabel">
-							<li class="animated lightSpeedIn"><a href="#">Personal</a></li>
-							<li class="animated lightSpeedIn"><a href="#">Organization</a></li>
-							<li class="animated lightSpeedIn"><a href="#">UN Professional</a></li>
-						</ul>
-					</div>
-					<div class="checkbox-holder text-left">
-						<div class="checkbox">
-							<input type="checkbox" value="None" id="squaredOne" name="check" />
-							<label for="squaredOne"><span>I Agree to the <strong>Terms &amp; Conditions</strong></span></label>
-						</div>
-					</div>
-					<a href="accountdetails.html" type="submit" class="btn btn-submit">Submit</a>
-				</form>
-			</div>
-		</div>
-	</div>
 	
 	<!-- Holder for mobile navigation -->
 	<div class="mobile-nav">
