--- a/thanks.html
+++ b/thanks.html
@@ -33,6 +33,15 @@
 	<link rel="stylesheet" type="text/css" href="fonts/eleganticons/et-icons.css">
 	<!-- Main style -->
 	<link rel="stylesheet" type="text/css" href="css/cardio.css">
+
+<style>
+.flb {
+	display:block;
+	margin:10px;
+	position:relative;
+}
+</style>
+
 </head>
 
 <body>
@@ -54,64 +63,53 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right main-nav">
-					<li><a href="#pricing">Logout</a></li>
-					<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">Account Settings</a></li>
+					<li><a href="#pricing">Account Settings</a></li>
+					<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">Main</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
 	</nav>
-	<header id="intro">
+	<section class="section section-padded" style="background-image:url('img/header.jpg');">
 		<div class="container">
-			<div class="table">
-				<div class="header-text">
-					<div class="row">
-						<div class="text-center" style="margin-top:-200px;">
-							<h3 class="light white">Welcome back!</h3>
-							<h1 class="white typed">What would you like to do next?</h1>
+			<div class="row" style="height:700px;"><center>
+				<h3 class="light white">The United Nations has received your submission</h3>
+				<h1 class="white typed">Thank you!</h1><br />
+				<div><button class="flb btn btn-white-fill expand">Return to Home</button></div>
+				<div><button class="flb btn btn-white-fill expand">Track Your Submissions</button></div>
+				<div><button class="flb btn btn-white-fill expand">Logout</button></div>
+		</div>
+	</div>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 text-center-mobile">
+					<h3 class="white">Do you have questions?</h3>
+					<h5 class="light regular light-white">We're available by email to answer your questions.</h5>
+					<a href="#" class="btn btn-blue ripple trial-button">Email us</a>
+				</div>
+				<div class="col-sm-6 text-center-mobile">
+					<h3 class="white">Opening Hours <span class="open-blink"></span></h3>
+					<div class="row opening-hours">
+						<div class="col-sm-6 text-center-mobile">
+							<h5 class="light-white light">Mon - Fri</h5>
+							<h3 class="regular white">9:00 - 22:00</h3>
+						</div>
+						<div class="col-sm-6 text-center-mobile">
+							<h5 class="light-white light">Sat - Sun</h5>
+							<h3 class="regular white">10:00 - 18:00</h3>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</header>
-	<section>
-		<div class="cut cut-top"></div>
-		<div class="container">
-			<div class="row intro-tables" style="margin-top:-210px;">
-				<div class="col-md-4">
-					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">View the current status of a previously submitted UPR complaint.</h5>
-						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Status of UPR Complaint</h4>
-							<a href="status.html" class="btn btn-white-fill expand">Check Status</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4" style="border:5px solid #18a5fe;">
-					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Create and submit a new UPR complaint.</h5>
-						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Submit New UPR Complaint</h4>
-							<a href="submission.html" class="btn btn-white-fill expand">Submit New</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Update an existing UPR complaint</h5>
-						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Merge a UPR Complaint</h4>
-							<a href="edit.html" class="btn btn-white-fill expand">Edit / Merge</a>
-						</div>
-					</div>
-				</div>
+			<div class="row bottom-footer text-center-mobile">
+				<div class="col-sm-8">
+					<p>&copy; 2016. Powered by <a href="http://www.phir.co/">Benetech Labs</a></p>
 				</div>
 			</div>
 		</div>
-	</section>
-	
+	</footer>
 	<!-- Holder for mobile navigation -->
 	<div class="mobile-nav">
 		<ul>
