--- a/index.html
+++ b/index.html
@@ -87,32 +87,29 @@
 		<div class="container">
 			<div class="row intro-tables">
 				<div class="col-md-4">
-					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Premium Membership</h5>
+					<div class="intro-table intro-table-hover" style="background-image:url('img/table-1.jpg')">
+						<h5 class="white heading hide-hover">See the Map of Universal Periodic Review Submissions from Around the World</h5>
 						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Register Today</h4>
-							<h4 class="white heading small-pt">20% Discount</h4>
-							<a href="#" class="btn btn-white-fill expand">Register</a>
+							<h4 class="white heading small-heading no-margin regular">See Submissions Data</h4>
+							<a href="#" class="btn btn-white-fill expand">See Map</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Premium Membership</h5>
+					<div class="intro-table intro-table-hover" style="background-image:url('img/table-2.jpg')">
+						<h5 class="white heading hide-hover">Learn more about how the Universal Periodic Review works and the basic guidelines to submit a complaint</h5>
 						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Register Today</h4>
-							<h4 class="white heading small-pt">20% Discount</h4>
-							<a href="#" class="btn btn-white-fill expand">Register</a>
+							<h4 class="white heading small-heading no-margin regular">UPR Guidelines and Questions</h4>
+							<a href="#" class="btn btn-white-fill expand">UPR Guidelines</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="intro-table intro-table-hover">
-						<h5 class="white heading hide-hover">Premium Membership</h5>
+					<div class="intro-table intro-table-hover" style="background-image:url('img/table-3.jpg')">
+						<h5 class="white heading hide-hover">A History of the United Nations Office of the High Commissioner</h5>
 						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Register Today</h4>
-							<h4 class="white heading small-pt">20% Discount</h4>
-							<a href="#" class="btn btn-white-fill expand">Register</a>
+							<h4 class="white heading small-heading no-margin regular">A History of UOCHR</h4>
+							<a href="#" class="btn btn-white-fill expand">Learn More</a>
 						</div>
 					</div>
 				</div>
