--- a/landing.html
+++ b/landing.html
@@ -68,7 +68,7 @@
 				<div class="header-text">
 					<div class="row">
 						<div class="text-center" style="margin-top:-200px;">
-							<h3 class="light white">Welcome back!</h3>
+							<h3 class="light white">Welcome to the Universal Periodic Review</h3>
 							<h1 class="white typed">What would you like to do next?</h1>
 						</div>
 					</div>
@@ -102,7 +102,7 @@
 					<div class="intro-table intro-table-hover">
 						<h5 class="white heading hide-hover">Update an existing UPR complaint</h5>
 						<div class="bottom">
-							<h4 class="white heading small-heading no-margin regular">Merge a UPR Complaint</h4>
+							<h4 class="white heading small-heading no-margin regular">Edit / Merge a UPR Complaint</h4>
 							<a href="edit.html" class="btn btn-white-fill expand">Edit / Merge</a>
 						</div>
 					</div>
@@ -111,6 +111,70 @@
 			</div>
 		</div>
 	</section>
+		<section>
+		<div class="cut cut-top"></div>
+		<div class="container">
+			<div class="row intro-tables">
+				<div class="col-md-4">
+					<div class="intro-table intro-table-hover" style="background-image:url('img/table-1.jpg')">
+						<h5 class="white heading hide-hover">See the Map of Universal Periodic Review Submissions from Around the World</h5>
+						<div class="bottom">
+							<h4 class="white heading small-heading no-margin regular">See Submissions Data</h4>
+							<a href="#" class="btn btn-white-fill expand">See Map</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="intro-table intro-table-hover" style="background-image:url('img/table-2.jpg')">
+						<h5 class="white heading hide-hover">Learn more about how the Universal Periodic Review works and the basic guidelines to submit a complaint</h5>
+						<div class="bottom">
+							<h4 class="white heading small-heading no-margin regular">UPR Guidelines and Questions</h4>
+							<a href="#" class="btn btn-white-fill expand">UPR Guidelines</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="intro-table intro-table-hover" style="background-image:url('img/table-3.jpg')">
+						<h5 class="white heading hide-hover">A History of the United Nations Office of the High Commissioner</h5>
+						<div class="bottom">
+							<h4 class="white heading small-heading no-margin regular">A History of UOCHR</h4>
+							<a href="#" class="btn btn-white-fill expand">Learn More</a>
+						</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 text-center-mobile">
+					<h3 class="white">Do you have questions?</h3>
+					<h5 class="light regular light-white">We're available by email to answer your questions.</h5>
+					<a href="#" class="btn btn-blue ripple trial-button">Email us</a>
+				</div>
+				<div class="col-sm-6 text-center-mobile">
+					<h3 class="white">Opening Hours <span class="open-blink"></span></h3>
+					<div class="row opening-hours">
+						<div class="col-sm-6 text-center-mobile">
+							<h5 class="light-white light">Mon - Fri</h5>
+							<h3 class="regular white">9:00 - 22:00</h3>
+						</div>
+						<div class="col-sm-6 text-center-mobile">
+							<h5 class="light-white light">Sat - Sun</h5>
+							<h3 class="regular white">10:00 - 18:00</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row bottom-footer text-center-mobile">
+				<div class="col-sm-8">
+					<p>&copy; 2016. Powered by <a href="http://www.phir.co/">Benetech Labs</a></p>
+				</div>
+			</div>
+		</div>
+	</footer>
 	
 	<!-- Holder for mobile navigation -->
 	<div class="mobile-nav">
