--- a/submission.html
+++ b/submission.html
@@ -80,7 +80,7 @@ input, textarea {
 		<div class="container">
 			<div class="row"><center>
 				<h3 class="white typed">Submit a New UPR Complaint</h3><br />
-				<div style="border:3px solid white; padding:30px 60px; width:75%; background-image:url('img/black-bg.jpg');">
+				<div style="border:3px solid white; padding:30px 60px; width:75%; background-image:url('img/footer.jpg');">
 					<div class="owl-twitter owl-carousel">
 						<div class="item text-left">
 
